// ignore_for_file: file_names

class FailedToPlaceShipException implements Exception {
  // You can add custom properties or methods if needed
}
